--- a/fe/src/assets/scss/pages/upload.scss
+++ b/fe/src/assets/scss/pages/upload.scss
@@ -1,12 +1,104 @@
 .upload {
-    background-image: url(https://cdn.wallpaperdirect.com/asset/img/product/110099/tiled/albany-whites-white-wallpaper-tiled-110099.jpg) ;
+    background-image: url(https://cdn.wallpaperdirect.com/asset/img/product/110099/tiled/albany-whites-white-wallpaper-tiled-110099.jpg);
     width: 100%;
     aspect-ratio: 16/9;
+    padding: 20px;
+    .edit-modal {
+        .row-input {
+            display: flex;
+            input,select {
+                width: 70%;
+                border: 1px solid #000;
+                padding: 10px;
+                margin-top: 10px;
+            }
+            .label {
+                flex : 1,
+            }
+        }
+    }
     .list-image {
+        display: flex;
+        justify-content: space-around;
+        row-gap: 20px;
+        flex-wrap: wrap;
+        align-items: flex-end;
         .image {
             width: 30%;
             border: 3px dashed #000;
             aspect-ratio: var(--ratio);
+            display: block;
+            cursor: pointer;
+            position: relative;
+            &.picked {
+                &.full-black {
+                    border: 10px inset #000;
+                }
+                &.full-white {
+                    border: 10px inset #fff;
+                }
+            }
+            input {
+                display: none;
+            }
+
+            .delete {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                z-index: 10;
+                cursor: pointer;
+                font-size: 24px;
+                background-color: rgba($color: #fff, $alpha: .4);
+            }
+
+            .edit {
+                position: absolute;
+                top: 10px;
+                right: 40px;
+                z-index: 10;
+                font-size: 24px;
+                cursor: pointer;
+                background-color: rgba($color: #fff, $alpha: .4);
+            }
+
+            .plus {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                &::before, &::after {
+                    content : "";
+                    border: 2px dashed #000;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50% , -50%);
+                    border-radius: 10px;
+                }
+                &::before {
+                    width: 90%;
+                    height: 10px;
+                }
+                &::after {
+                    height: 90%;
+                    width: 10px;
+                }
+            }
+
+            .img {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                overflow: hidden;
+
+                img {
+                    position: absolute;
+                    top: var(--x);
+                    left: var(--y);
+                }
+            }
         }
     }
 }
